# cintix-sql

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
scripts/: build.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: commands.rs  mod.rs
src/components/: ConnectionDialog.tsx  DatabaseExplorer.tsx  EditGrid.tsx  EditorPanel.tsx  ResultPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx
src/stores/: appStore.ts
src/styles/: global.css
src/types/: index.ts
